simplified the tailwind class names

--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .social-container {
+    @apply cursor-pointer p-5 aspect-square h-[28px] w-auto grid place-content-center rounded-full border border-white hover:border-primaryMagenta transition-all ease-in-out;
+  }
+  .social-icons {
+    @apply transition-all ease-in-out text-[1.2rem];
+  }
+}
