adjusted some css that was through feedback

--- a/src/input.css
+++ b/src/input.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .social-container {
-    @apply cursor-pointer p-[1.65rem] md:p-5 aspect-square h-[28px] w-auto grid place-content-center rounded-full border border-white hover:border-primaryMagenta transition-all ease-in-out;
+    @apply cursor-pointer p-[1.65rem] md:p-5 aspect-square w-[28px] h-[28px] grid place-content-center rounded-full border border-white hover:border-primaryMagenta transition-all ease-in-out;
   }
   .social-icons {
     @apply transition-all ease-in-out text-[1.73rem] md:text-[1.2rem];
